--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "third_party/tinyobjloader"]
 	path = third_party/tinyobjloader
 	url = https://github.com/syoyo/tinyobjloader
+[submodule "third_party/stb"]
+	path = third_party/stb
+	url = https://github.com/nothings/stb
