--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,6 +180,7 @@ if (VKW_BUILD_EXAMPLES)
         ${CMAKE_CURRENT_SOURCE_DIR}/example/01_rotate_box/app.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/example/02_load_obj/app.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/example/03_load_obj_many/app.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/example/04_deferred_shading/app.cpp
     )
 
     if (ANDROID)
