Update for compute shader example.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,6 +187,7 @@ if (VKW_BUILD_EXAMPLES)
         ${CMAKE_CURRENT_SOURCE_DIR}/example/05_instancing/app.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/example/06_raster_vtx_id/app.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/example/07_image_transfer/app.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/example/08_comp_shader/app.cpp
     )
 
     if (ANDROID)
