--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -191,6 +191,7 @@ if (VKW_BUILD_EXAMPLES)
         ${CMAKE_CURRENT_SOURCE_DIR}/example/06_raster_vtx_id/app.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/example/07_image_transfer/app.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/example/08_comp_shader/app.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/example/09_inverse_uv/app.cpp
     )
 
     if (ANDROID)
