Fix cmake option of glslang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,6 @@ set(SPIRV_HEADERS_SKIP_EXAMPLES ON CACHE BOOL "")
 set(SPIRV_HEADERS_SKIP_INSTALL ON CACHE BOOL "")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Headers)
 list(APPEND VKW_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Headers/include)
-list(APPEND VKW_LIBRARY SPIRV-Tools-opt)
 
 # SPIRV-Tools
 set(SKIP_SPIRV_TOOLS_INSTALL ON CACHE BOOL "")
@@ -128,6 +127,7 @@ list(APPEND VKW_LIBRARY SPIRV-Tools-opt)
 set(ENABLE_GLSLANG_BINARIES ON CACHE BOOL "")
 set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
 set(ENABLE_HLSL OFF CACHE BOOL "")
+set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/glslang)
 list(APPEND VKW_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/third_party/glslang)
 list(APPEND VKW_LIBRARY glslang SPIRV glslang-default-resource-limits
@@ -207,6 +207,7 @@ if (VKW_BUILD_EXAMPLES)
         ${CMAKE_CURRENT_SOURCE_DIR}/example/07_image_transfer/app.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/example/08_comp_shader/app.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/example/09_inverse_uv/app.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/example/10_glsl_optim/app.cpp
     )
 
     if (ANDROID)
