--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,14 +113,16 @@ endif()
 set(SPIRV_HEADERS_SKIP_EXAMPLES ON CACHE BOOL "")
 set(SPIRV_HEADERS_SKIP_INSTALL ON CACHE BOOL "")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Headers)
-list(APPEND VKW_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Headers/include)
+list(APPEND VKW_INCLUDE
+            ${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Headers/include)
 
 # SPIRV-Tools
 set(SKIP_SPIRV_TOOLS_INSTALL ON CACHE BOOL "")
 set(SPIRV_SKIP_EXECUTABLES ON CACHE BOOL "")
 # set(SPIRV_CHECK_CONTEXT ON CACHE BOOL "")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Tools)
-list(APPEND VKW_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Tools/include)
+list(APPEND VKW_INCLUDE
+            ${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Tools/include)
 list(APPEND VKW_LIBRARY SPIRV-Tools-opt)
 
 # GLSLang
