Make global vk_dynamic_loader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,12 +101,16 @@ if (VKW_LINK_DYNAMIC_VK)
     message(STATUS "Build VKW as dynacmic-vk mode")
     list(APPEND VKW_INCLUDE
                 ${CMAKE_CURRENT_SOURCE_DIR}/third_party/Vulkan-Headers/include)
+    add_definitions(-DVULKAN_HPP_ENABLE_DYNAMIC_LOADER_TOOL=1)  # dlopen tool
+    add_definitions(-DVULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1)  # Dynamic dispatch
 else()
     # Vulkan (Static)
     message(STATUS "Build VKW as static-vk mode")
     find_package(Vulkan REQUIRED)
     list(APPEND VKW_INCLUDE ${Vulkan_INCLUDE_DIRS})
     list(APPEND VKW_LIBRARY ${Vulkan_LIBRARY})
+    add_definitions(-DVULKAN_HPP_ENABLE_DYNAMIC_LOADER_TOOL=0)  # No dlopen tool
+    add_definitions(-DVULKAN_HPP_DISPATCH_LOADER_DYNAMIC=0)  # Static dispatch
 endif()
 
 # SPIRV-Headers
