--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ list(APPEND VKW_LIBRARY ${VKW_EXTERNAL_LIBRARY})
 # ------------------------------------------------------------------------------
 # ----------------------------------- Common -----------------------------------
 # ------------------------------------------------------------------------------
-project(vulkan_practice CXX C)
+project(vulkan_wrapper CXX C)
 
 set(CMAKE_CXX_STANDARD 14)  # C++ 14
 
