Add atomic float add example.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,6 +265,7 @@ if (VKW_BUILD_EXAMPLES)
         ${CMAKE_CURRENT_SOURCE_DIR}/example/09_inverse_uv/app.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/example/10_glsl_optim/app.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/example/11_img_buf/app.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/example/12_comp_shader_atomic_float/app.cpp
     )
 
     if (ANDROID)
